--- a/testAJAX.html
+++ b/testAJAX.html
@@ -6,8 +6,9 @@
 <div>
 <h1>Change DIV content using AJAX </h1>
 <div id="div1"> this is the unchanged divcontent</div>>
-<button id="button1" onclick="callDivChange()">Click me to change the DIV content
-</button>
+<button id="button1" onclick="callDivChange()">Click me to change the DIV content</button>
+<p> Type the html file name here -note you need to include .html </p>
+<input type="text" name="filename" id="filename" size=50>
 </div>
 <script src="testAJAX.js"></script>
 </body>
