Different options form

--- a/createForm.html
+++ b/createForm.html
@@ -4,8 +4,31 @@
 </head>
 <body>
 <h1>This is a simple form</h1>Name
+<div>
 <!-- Adding text boxes, <p> gives a new line-->
 <p><label for="name">Name: </label><input type="text" size="25" id="name"/></p>
 <p><label for="surname">Surname: </label><input type="text" size="25" id="surname"></p>
 <p><label for="module">Module Title: </label><input type="text" size="25" id="module"></p>
+<!-- adding radio buttons-->
+<p>Morning or Afternoon Lectures?</p>
+	Morning: <input type="radio" name="amorpm" id="morning" /><br />
+	Afternoon: <input type= "radio" name="amorpm" id="afternoon"/><br />
+<!-- adding check boxes-->
+<p> Which Modules are you taking?></p>
+	Web and Mobile: <input type="checkbox" name="modules" id= check1 value="Web and Mobile" checked="yes" /><br />
+	Sensors and Location: <input type="checkbox" name="modules" id= check1 value="Sensors and Location" /><br />
+	Reality Capture: <input type="checkbox" name="modules" id= check1 value="Relity Capture"  /><br />
+	Climate Modelling: <input type="checkbox" name="modules" id= check1 value="Climate Modelling"  /><br />
+<!-- creating a drop down menu-->
+<p>What is your first language?</p>
+<select name="languageselectbox" id="languageselectbox">
+	<option> English </option>
+	<option> Mandarin </option>
+	<option> Greek </option>
+	<option> French </option>
+	<option> Spanish </option>
+	<option> Arabic </option>
+	<option> Other </option>
+</select>
+<br />
 </body>
