--- a/createForm.html
+++ b/createForm.html
@@ -31,4 +31,9 @@
 	<option> Other </option>
 </select>
 <br />
+</div>
+<button id="startUpload" onclick="startDataUpload()">Start Data Upload</button>
+<div id"dataUploadResult">The result of the Upload goes here</div>
+<script src="uploadData.js"></script>
+
 </body>
