--- a/createForm.html
+++ b/createForm.html
@@ -8,7 +8,7 @@
 <!-- Adding text boxes, <p> gives a new line-->
 <p><label for="name">Name: </label><input type="text" size="25" id="name"/></p>
 <p><label for="surname">Surname: </label><input type="text" size="25" id="surname"></p>
-<p><label for="module">Module Title: </label><input type="text" size="25" id="module"></p>
+<p><label for="moduleName">Module Title: </label><input type="text" size="25" id="moduleName"></p>
 <!-- adding radio buttons-->
 <p>Morning or Afternoon Lectures?</p>
 	Morning: <input type="radio" name="amorpm" id="morning" /><br />
