--- a/createForm.html
+++ b/createForm.html
@@ -1,18 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Simple Form Creation Example</title>
+	<title>Simple Form Creation Example</title>
 </head>
 <body>
-<h1>This is a simple form</h1>Name
-<div>
-<!-- Adding text boxes, <p> gives a new line-->
-<p><label for="name">Name: </label><input type="text" size="25" id="name"/></p>
-<p><label for="surname">Surname: </label><input type="text" size="25" id="surname"></p>
-<p><label for="moduleName">Module Title: </label><input type="text" size="25" id="moduleName"></p>
-<!-- adding radio buttons-->
-<p>Morning or Afternoon Lectures?</p>
-	Morning: <input type="radio" name="amorpm" id="morning" /><br />
-	Afternoon: <input type= "radio" name="amorpm" id="afternoon"/><br />
+	<h1>This is a simple form</h1>
+	<!-- add <p> to start a new paragraph and skip a line -->
+	<!-- add <br> to go to the next line but you need <br> twice to skip a line -->
+	<!-- the followings add text boxes -->
+	<p><label for="name">Name: </label><input type="text" size="25" id="name"/></p>
+	<p><label for="surname">Surname: </label><input type="text" size="30" id="surname"></p>
+	<p><label for="module">Module Title: </label><input type="text" size="60" id="module"></p>
+
+	<!-- the followings add a radio button -->
+	<p>Would you like lectures in the morning or afternoon?</p>
+		Morning: <input type="radio" name="time" id="morning"><br>
+		Afternoon: <input type="radio" name="time" id="afternoon"><br>
 <!-- adding check boxes-->
 <p> Which Modules are you taking?></p>
 	Web and Mobile: <input type="checkbox" name="modules" id= check1 value="Web and Mobile" checked="yes" /><br />
@@ -30,10 +33,17 @@
 	<option> Arabic </option>
 	<option> Other </option>
 </select>
-<br />
-</div>
-<button id="startUpload" onclick="startDataUpload()">Start Data Upload</button>
-<div id"dataUploadResult">The result of the Upload goes here</div>
-<script src="uploadData.js"></script>
 
+<p>Specify coordinates for your submission:</p>
+	<label for="latitude">Latitude: </label><input type="text" size="20" id="latitude"><br>
+	<label for="latitude">Longitude: </label><input type="text" size="20" id="longitude">
+
+
+	<!-- the following adds a button to load the data -->
+	<p><button id="startUpload" onclick="startDataUpload();">Start Data Upload</button></p>
+	<div id="dataUploadResult">The result of the upload goes here</div>
+
+	<!-- the following calls the js file to process the data -->
+	<script src="uploadData.js"></script>
 </body>
+</html>
